--- a/Tests/resources/file.html
+++ b/Tests/resources/file.html
@@ -9,6 +9,12 @@
   <body>
     <p>Hello world</p>
     <div>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+      laborum, repudiandae explicabo provident eius ratione sed expedita ad
+      porro blanditiis asperiores commodi dicta. Cum eius sunt quisquam facilis
+      quos necessitatibus.
+    </div>
+    <div>
       <b>Bold text</b>
     </div>
     <script>
